# xfoil-python

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
plotlib/colorstuff/: rgb.c  rgbtbl.h  rgbtest.c
plotlib/examples/: Makefile.NT  Readme-examples  cmap2.f  cmap3.f  colors.inc  contest.f  defmap.f  gridtest.f  masks.inc  mousexy.f  mousexy2.f  spectrum.f  squares.f  squares2.f  squaresdoublebuff.f  symbols.f  symbolsall.f  volts.f  volts_old.f  zoomtest.f
plotlib/sym/: Readme  char.fnt  math.fnt  slan.fnt  symb.fnt  symgen.f  test.f
plotlib/win32/: W32win_pthread.c  mousexy3.f
runs/: cp_060_050.387  cp_100_040.387  cp_250_040.203  cp_500_080.lnv  e387_09.100  e387_11.100  polref_100.387
src/: BLPAR.INC  CIRCLE.INC  PINDEX.INC  XBL.INC  XDES.INC  XFOIL.INC  api.f90  aread.f90  getarg.f90  i_blpar.f90  i_iopol.f90  i_pindex.f90  i_xbl.f90  i_xfoil.f90  iopol.f  iopol.f90  m_aread.f90  m_naca.f90  m_sort.f90  m_spline.f90  m_userio.f90  m_xbl.f90  m_xfoil.f90  m_xgdes.f90  m_xgeom.f90  m_xoper.f90  m_xpanel.f90  m_xpol.f90  m_xqdes.f90  m_xutils.f90  mod_fixer.py  mod_helper.py  naca.f90  p_xfoil.f90  s_xfoil.f90  s_xoper.f90  sort.f90  spline.f90  spline2mod.py  use_specific.py  (+20 more)
src/fortran/: api.f90  i_circle.f90  i_pindex.f90  i_xfoil.f90  m_aread.f90  m_iopol.f90  m_naca.f90  m_sort.f90  m_spline.f90  m_userio.f90  m_xbl.f90  m_xblsys.f90  m_xfoil.f90  m_xgdes.f90  m_xgeom.f90  m_xmdes.f90  m_xoper.f90  m_xpanel.f90  m_xpol.f90  m_xqdes.f90  m_xsolve.f90  m_xutils.f90  p_xfoil.f90  s_xbl.f90  s_xfoil.f90
src/xfoil/: __init__.py  model.py  test.py  xfoil.py
xfoil/: __init__.py  model.py  test.py  xfoil.py
